# evil-android

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
scripts/: to-rgb565.py
src/: main.rs  platform.rs
src/platform/: esp32.rs  pc.rs
