[package]
name = "evil-android"
version = "0.1.0"
authors = ["Marcin Radomski <marcin@mradomski.pl>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "evil-android"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-svc = { version = "0.49", default-features = false }
st7735-lcd = "0.10.0"
esp-idf-hal = { version = "0.44.0", features = ["panic_handler"] }

[target.'cfg(target_os = "linux")'.dependencies]
glium = "0.34.0"
winit = "0.29.15"
slice-of-array = "0.3.2"

[dependencies]
log = { version = "0.4", default-features = false }
embedded-graphics = "0.8.1"
rand = "0.8.5"
embedded-graphics-framebuf = "0.5.0"
anyhow = "1.0.86"

[target.'cfg(target_arch = "xtensa")'.build-dependencies]
embuild = "0.32.0"
